--- a/jenkins-plugin-model/src/demo2-publish/dockerfile
+++ b/jenkins-plugin-model/src/demo2-publish/dockerfile
@@ -9,7 +9,7 @@ WORKDIR /jenkins-plugin-model//src/Pi.Web
 RUN dotnet restore
 
 # app image
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine
 
 EXPOSE 80
 ENTRYPOINT ["dotnet", "Pi.Web.dll"]
